add all 4 images online